prevent image to overflow editor

--- a/app/assets/stylesheets/commons/_summernote.sass
+++ b/app/assets/stylesheets/commons/_summernote.sass
@@ -4,3 +4,6 @@
         font-weight: bold
     .note-btn.dropdown-toggle:after
         content: none
+    .note-editable img
+        max-width: 100%
+        height: auto
